# DataSeeder

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
src/dataseeder/: pipeline.py
src/dataseeder/generators/: activity_logs.py  clients.py  products.py  sales.py
src/dataseeder/schemas/: activity_logs.py  clients.py  products.py  sales.py
src/dataseeder/seed/: activity_logs.py  auth.py  clients.py  products.py  sales.py
src/dataseeder/supabase/: config.py  db.py
src/dataseeder/utils/: insert.py  schema.py  serialize.py  time.py
tests/: conftest.py
tests/generators/: test_clients.py  test_products.py  test_sales.py
tests/schemas/: test_clients_schema.py
